# Axiom2d

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TECH_DEBT_LEDGER.md  clippy.toml  postmortem-2026-07-09-quality-upgrade-noop.md  release.ps1  shape list.json  temp_scores.py  test_audit_output.json  test_audit_results.json  test_scores.json
crates/axiom2d/: Cargo.toml
crates/axiom2d/src/: default_plugins.rs  lib.rs  prelude.rs  splash.rs  splash_letters.rs
crates/axiom2d/src/splash/: animation.rs  letters.rs  mod.rs  render.rs  (+1 more)
crates/axiom2d/tests/: default_plugins.rs  splash_animation.rs  splash_render.rs
crates/card_game/: Cargo.toml  build.rs
crates/card_game/benches/: bake.rs  stress.rs
crates/card_game/src/: camera_drag.rs  card.rs  card_art_shader.rs  card_damping.rs  card_definition.rs  card_drag.rs  card_face_layout.rs  card_face_visibility.rs  card_flip.rs  card_item_form.rs  card_label.rs  card_pick.rs  card_release.rs  card_render_layer.rs  card_text_render.rs  card_zone.rs  drag_state.rs  flip_animation.rs  hand.rs  hand_layout.rs  integration_tests.rs  lib.rs  physics_helpers.rs  plugin.rs  prelude.rs  scale_spring.rs  sort_propagation.rs  spawn_table_card.rs  stash_boundary.rs  stash_drag_hover.rs  stash_grid.rs  stash_hover.rs  stash_icon.rs  stash_layout.rs  stash_pages.rs  stash_render.rs  test_helpers.rs  viewport_camera.rs
crates/card_game/tests/: card_reader.rs  card_reader_spawn.rs  card_zone_config.rs  hand_cards.rs  lib.rs  main.rs  stash_hover.rs  stash_layout.rs  stash_pages.rs  stash_toggle.rs  test_helpers.rs
crates/card_game_bin/: Cargo.toml
crates/card_game_bin/src/: card_data.rs  main.rs
crates/engine_app/: Cargo.toml
crates/engine_app/src/: app.rs  lib.rs  mouse_world_pos_system.rs  prelude.rs  profiler_plugin.rs  window_size.rs
crates/engine_app/tests/: app.rs
crates/engine_assets/: Cargo.toml
crates/engine_assets/src/: asset_server.rs  handle.rs  lib.rs  prelude.rs  scene.rs
crates/engine_assets/tests/: asset_server.proptest-regressions  asset_server.rs
crates/engine_audio/: Cargo.toml
crates/engine_audio/proptest-regressions/: spatial.txt
crates/engine_audio/src/: audio_backend.rs  audio_res.rs  cpal_backend.rs  lib.rs  mixer.rs  mixer_engine.rs  play_sound_buffer.rs  play_sound_system.rs  plugin.rs  prelude.rs  sound_data.rs  sound_effect.rs  sound_library.rs  spatial.rs  test_helpers.rs
crates/engine_audio/tests/: backend_cpal.rs  lib.rs  mixer_engine.rs  playback_system.rs  sound_data.rs  sound_effect.rs  sound_library.rs  spatial.rs
crates/engine_core/: Cargo.toml  unused.csv
crates/engine_core/benches/: spring.rs  stress.rs
crates/engine_core/src/: color.rs  error.rs  event_bus.rs  lib.rs  prelude.rs  profiler.rs  scale_spring.rs  spatial.rs  spring.rs  time.rs  transform.rs  types.rs  window.rs
crates/engine_core/tests/: color.rs  event_bus.rs  scale_spring.rs  transform.rs  types.rs
crates/engine_physics/: Cargo.toml
crates/engine_physics/benches/: physics.rs  stress.rs
crates/engine_physics/src/: collider.rs  collision_event.rs  hit_test.rs  lib.rs  physics_backend.rs  physics_command.rs  physics_command_apply_system.rs  physics_res.rs  physics_step_system.rs  physics_sync_system.rs  plugin.rs  prelude.rs  rapier_backend.rs  rigid_body.rs
crates/engine_physics/tests/: lib.rs  physics_step_system.rs  physics_sync_system.rs  rapier_backend.rs  rigid_body.rs
crates/engine_render/: Cargo.toml
crates/engine_render/benches/: font.rs  stress.rs  tessellation.rs
crates/engine_render/src/: atlas.rs  bloom.rs  camera.rs  clear.rs  culling.rs  font.rs  image_data.rs  lib.rs  material.rs  plugin.rs  prelude.rs  rect.rs  renderer.rs  shader.rs  shape.rs  sprite.rs  testing.rs  visual_regression.rs  wgpu_renderer.rs  window.rs
crates/engine_render/tests/: bloom.rs  camera.rs  clear.rs  culling.rs  image_data.rs  material.rs  renderer.rs  shape_cache.rs  shape_components.rs  shape_path.rs  shape_render.rs  sprite.rs  testing_mod.rs  testing_visual_regression.rs  wgpu_renderer_gpu_init.rs  wgpu_renderer_renderer.rs  wgpu_renderer_shaders.rs  wgpu_renderer_types.rs
crates/engine_scene/: Cargo.toml
crates/engine_scene/src/: hierarchy.rs  lib.rs  prelude.rs  render_order.rs  sort_propagation.rs  spawn_child.rs  transform_propagation.rs  visibility.rs
crates/engine_scene/tests/: hierarchy.rs  lib.rs  spawn_child.rs  transform_propagation.rs  visibility.rs
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/: anchor.rs  button.rs  draw_command.rs  flex_layout.rs  interaction.rs  layout.rs  lib.rs  margin.rs  panel.rs  plugin.rs  prelude.rs  progress_bar.rs  render.rs  text.rs  text_render.rs  theme.rs  ui_event.rs  ui_node.rs  unified_render.rs
crates/engine_ui/tests/: interaction.rs  layout_anchor.rs  layout_flex.rs  layout_system.rs  lib.rs  render.rs  unified_render.rs  widget_button.rs  widget_node.rs  widget_progress_bar.rs
crates/particle_poc/: Cargo.toml
crates/particle_poc/src/: capture.rs  lib.rs  main.rs  state.rs
crates/particle_poc/tests/: main.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: dual_grid.rs  lib.rs  material.rs  prelude.rs  shader.rs  tile_def.rs  wfc.rs
crates/terrain_viewer/: Cargo.toml
crates/terrain_viewer/src/: main.rs
tools/: Cargo.toml
tools/img-to-shape/: Cargo.toml
tools/img-to-shape-gui/: Cargo.toml
tools/img-to-shape-gui/src/: codegen.rs  lib.rs  loader.rs  main.rs  preview.rs  state.rs
tools/img-to-shape-gui/tests/: preview.rs  state.rs
tools/img-to-shape/src/: bezier_fit.rs  boundary_graph.rs  codegen.rs  contour.rs  lib.rs  manifest.rs  scale2x.rs  segment.rs  simplify.rs  transform.rs
tools/img-to-shape/tests/: boundary_graph.rs  codegen.rs  lib.rs  segment.rs  simplify.rs
tools/living-docs/: Cargo.toml
tools/living-docs/src/: lib.rs  main.rs
tools/living-docs/tests/: lib.rs
tools/tiled-to-shapes/: Cargo.toml  README.md
tools/tiled-to-shapes/src/: codegen.rs  extract.rs  lib.rs  main.rs  normalize.rs  pipeline.rs  scaffold.rs  tsx_parser.rs  types.rs
tools/tiled-to-shapes/tests/: main.rs
(+657 files in other folders)
