[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy_ecs = "0.16"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
thiserror = "2.0"
guillotiere = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wgpu = { version = "24", default-features = false, features = ["dx12", "wgsl"] }
winit = "0.30"
lyon = "1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Too noisy for an engine crate with many public types
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Style preferences that conflict with project conventions
needless_pass_by_value = "allow"
# bevy_ecs systems take Res/ResMut by value — this fires on every system
return_self_not_must_use = "allow"
# Cast lints — game engines do u32/f32/i32 conversions constantly
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Correctness lints worth promoting
unwrap_used = "warn"
