[workspace]
members = ["crates/*", "tools/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bevy_ecs = "0.16"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
pollster = "0.4"
thiserror = "2.0"
guillotiere = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = { version = "24", default-features = false, features = ["dx12", "wgsl"] }
winit = "0.30"
lyon = "1.0"
naga = { version = "24", features = ["wgsl-in"] }
cpal = "0.15"
fundsp = { version = "0.21", default-features = false, features = ["std"] }
crossbeam = "0.8"
rapier2d = "0.22"
proptest = { version = "1", default-features = false, features = ["std"] }
rand = "0.8"
rand_chacha = "0.3"
image-compare = "0.4"
insta = { version = "1", features = ["ron"] }
ron = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "std"] }
ttf-parser = "0.25"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Too noisy for an engine crate with many public types
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Style preferences that conflict with project conventions
needless_pass_by_value = "allow"
# bevy_ecs systems take Res/ResMut by value — this fires on every system
return_self_not_must_use = "allow"
# Cast lints — game engines do u32/f32/i32 conversions constantly
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Engine/game functions often have many params (mesh, color, position, size, etc.)
too_many_arguments = "allow"
# Long functions are common in tessellation, codegen, and test helpers
too_many_lines = "allow"
# Pedantic lints too noisy for game/engine code
similar_names = "allow"
many_single_char_names = "allow"
trivially_copy_pass_by_ref = "allow"
# bevy_ecs query types are inherently complex; type aliases add noise without clarity
type_complexity = "allow"
# Card signature test data uses multi-digit floats by necessity
unreadable_literal = "allow"
# Test setup structs use _entity postfix intentionally
struct_field_names = "allow"
# Default::default() is idiomatic in call sites where the type is inferred
default_trait_access = "allow"
# Tests compare exact f32 constants; production code uses epsilon where needed
float_cmp = "allow"
# Correctness lints worth promoting
unwrap_used = "warn"

[profile.dev]
debug = 1              # line tables only — cuts DWARF bloat dramatically
incremental = true     # keep for iteration speed, cargo clean periodically

[profile.dev.package."*"]
debug = false          # no debug info for dependencies
opt-level = 0

[profile.release]
opt-level = "z"       # optimize for size ("z" measured 14% smaller than "s")
lto = true            # full LTO — slower builds, smaller binary
codegen-units = 1     # better optimization, slower compile
panic = "abort"       # drops unwind tables
strip = "symbols"     # strips everything — use release-debuggable for stack traces

[profile.release-debuggable]
inherits = "release"
debug = true          # keep debuginfo for profilers and source-backed stack traces
strip = false         # preserve symbols in the binary
panic = "unwind"      # backtraces work
opt-level = 2         # speed over size, better debuggability

[profile.profiling]
inherits = "release-debuggable"
opt-level = 3         # profile the optimized code path, not the size-tuned release build
lto = false           # faster rebuilds and clearer call trees during iteration
codegen-units = 16    # trade a little peak perf for much faster profiling rebuilds
