[workspace]
members = ["img-to-shape", "img-to-shape-gui", "living-docs"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["png"] }
lyon = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
similar_names = "allow"
many_single_char_names = "allow"
trivially_copy_pass_by_ref = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
struct_field_names = "allow"
default_trait_access = "allow"
float_cmp = "allow"
unwrap_used = "warn"
