[package]
name = "axiom2d"
edition.workspace = true
version.workspace = true

[dependencies]
engine_core = { path = "../engine_core" }
engine_app = { path = "../engine_app" }
engine_ecs = { path = "../engine_ecs" }
engine_input = { path = "../engine_input" }
engine_render = { path = "../engine_render" }
engine_scene = { path = "../engine_scene" }
