[package]
name = "axiom2d"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["render", "audio"]
render = ["dep:engine_render"]
audio = ["dep:engine_audio"]

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
engine_assets = { path = "../engine_assets" }
engine_core = { path = "../engine_core" }
engine_app = { path = "../engine_app" }
engine_ecs = { path = "../engine_ecs" }
engine_input = { path = "../engine_input" }
engine_audio = { path = "../engine_audio", optional = true }
engine_render = { path = "../engine_render", optional = true }
engine_scene = { path = "../engine_scene" }

[dev-dependencies]
engine_render = { path = "../engine_render", features = ["testing"] }
glam.workspace = true
winit.workspace = true
