[package]
name = "card_game"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
engine_input = { path = "../engine_input" }
engine_physics = { path = "../engine_physics" }
engine_scene = { path = "../engine_scene" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ron = { workspace = true }
