[package]
name = "card_game"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine_app = { path = "../engine_app" }
engine_core = { path = "../engine_core" }
engine_input = { path = "../engine_input" }
engine_render = { path = "../engine_render" }
engine_physics = { path = "../engine_physics" }
engine_scene = { path = "../engine_scene" }
engine_ui = { path = "../engine_ui" }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
axiom2d = { path = "../axiom2d" }
engine_render = { path = "../engine_render", features = ["testing"] }
naga = { workspace = true }
proptest = { workspace = true }
ron = { workspace = true }
