[package]
name = "card_game_bin"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
axiom2d = { path = "../axiom2d" }
card_game = { path = "../card_game" }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing-subscriber = { workspace = true }
