[package]
name = "engine_app"
edition.workspace = true
version.workspace = true

[dependencies]
engine_core = { path = "../engine_core" }
engine_ecs = { path = "../engine_ecs" }
engine_render = { path = "../engine_render" }
winit = { workspace = true }

[dev-dependencies]
bevy_ecs = { workspace = true }
