[package]
name = "engine_app"
edition.workspace = true
version.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
engine_ecs = { path = "../engine_ecs" }
engine_input = { path = "../engine_input" }
engine_render = { path = "../engine_render" }
winit = { workspace = true }

[dev-dependencies]
engine_render = { path = "../engine_render", features = ["testing"] }
