[package]
name = "engine_core"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
ron = { workspace = true }

[[bench]]
name = "spring"
harness = false

[[bench]]
name = "stress"
harness = false
