[package]
name = "engine_physics"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs.workspace = true
crossbeam.workspace = true
engine_core = { path = "../engine_core" }
glam.workspace = true
rapier2d.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
bevy_ecs = { workspace = true }
criterion = { workspace = true }
insta.workspace = true
ron.workspace = true

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "stress"
harness = false
