[package]
name = "engine_render"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
testing = []

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
engine_scene = { path = "../engine_scene" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
guillotiere = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
lyon = { workspace = true }

[dev-dependencies]
naga = { workspace = true }
ron = { workspace = true }
