[package]
name = "engine_render"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
testing = ["dep:image-compare"]

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
engine_scene = { path = "../engine_scene" }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
guillotiere = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
lyon = { workspace = true }
ttf-parser = { workspace = true }
image-compare = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
engine_render = { path = ".", features = ["testing"] }
image-compare = { workspace = true }
insta = { workspace = true }
naga = { workspace = true }
proptest = { workspace = true }
ron = { workspace = true }
ttf-parser = { workspace = true }

[[bench]]
name = "tessellation"
harness = false

[[bench]]
name = "font"
harness = false
