[package]
name = "engine_scene"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ron = { workspace = true }
