[package]
name = "engine_ui"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true }
engine_core = { path = "../engine_core" }
engine_input = { path = "../engine_input" }
engine_render = { path = "../engine_render" }
engine_scene = { path = "../engine_scene" }
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
engine_render = { path = "../engine_render", features = ["testing"] }
proptest = { workspace = true }
ron = { workspace = true }
