[package]
name = "particle_poc"
edition.workspace = true
version.workspace = true

[[bin]]
name = "particle_poc"
path = "src/main.rs"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
rapier2d = { workspace = true }
image = { workspace = true }
image-compare = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
