[package]
name = "terrain"
edition.workspace = true
version.workspace = true

[dependencies]
engine_render = { path = "../engine_render" }
bevy_ecs = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
