[package]
name = "terrain_viewer"
edition.workspace = true
version.workspace = true

[[bin]]
name = "terrain_viewer"
path = "src/main.rs"

[dependencies]
terrain = { path = "../terrain" }
axiom2d = { path = "../axiom2d" }
engine_ecs = { path = "../engine_ecs" }
engine_input = { path = "../engine_input" }
engine_render = { path = "../engine_render" }
engine_ui = { path = "../engine_ui" }
bevy_ecs = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
