[package]
name = "img-to-shape"
edition.workspace = true
version.workspace = true

[dependencies]
engine_core = { path = "../../crates/engine_core" }
engine_render = { path = "../../crates/engine_render" }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
